syntax = "proto3";

package fixbug;

message LoginRequest
{
    bytes name = 1;
    bytes pwd = 2;
}

message LoginResponse
{
    int32 errcode = 1;
    bytes errmsg = 2;
    bool success = 3;
}

message ResultCode 
{
    int32 errcode = 1;
    bytes errmsg = 2;
}

message GetFriendListRequset
{
    uint32 userid = 1;
}

message User
{
    bytes name = 1;
    uint32 age = 2;
    enum Sex
    {
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}

message GetFriendListResponse
{
    ResultCode result = 1;
    repeated User friend_list = 2;
}